# paint-chaser

./: .gitignore  .stow-local-ignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
script/: paint_chaser  test.py  train_dqn.py  train_reinforce.py  visualize_filter.py
src/paint_chaser/: model.py
src/paint_chaser/environment/: ScreenCamera.py  UFO50PaintChaseController.py  UFO50PaintChaseEnv.py  UFO50PaintChaseTile.py  __init__.py
src/paint_chaser/environment/transform/: RGBToRedBlue.py  __init__.py
src/paint_chaser/train/: EpisodeBuffer.py  __init__.py
