[project]
name = "paint-chase"
version = "0.1.0"
description = "A reinforcement learning agent that learns to play UFO50's Paint Chase minigame"
authors = [
    { name = "Steven Chiacchira", email = "ezuharad@gmail.com" },
]
dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=1.26.3",
    "torch>=2.2.0",
    "tqdm>=4.66.1",
]
requires-python = ">=3.13.5"
readme = "README.md"
license = { file = "LICENSE.md" }

[project.urls]
Homepage = "https://github.com/ezuharad/paint-chase"
Repository = "https://github.com/ezuharad/paint-chase.git"

[tool.ruff]
line-length = 88
target-version = "py313"

select = ["F", "I"]
ignore = [
    "D203",     # no-blank-line-before-class
    "D212",     # multi-line-summary-first-line
    "D100",     # undocumented-public-module
    "RET504",   # unnecessary assign before return
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "S101",    # Use of assert detected
]

[tool.sphinx]
project = "pAInt chaser"
author = "Steven Chiacchira"
copyright = "2025, Steven Chiacchira"
version = "0.1.0"
release = "0.1.0"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx.ext.githubpages",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]

